# aruco-estimator

./: .gitattributes  .gitignore  .gitmodules  0.4  MANIFEST.in  README.md  cmds.sh  construct_and_register.sh  download_dataset.py  environment.yml  example.py  init_env.sh  merge.py  pyproject.toml  requirements.txt  scale_estimator.py  setup.py  unspy.py
.github/workflows/: python-package.yml  python-publish.yml
.old/: analyze.py  registration.py  visualization_scale_factor_estimator.py
.old/currie/: README.md  example.py  reverse_project.py
.old/currie/examples/: example.py
aruco_estimator/: __init__.py  aruco.py  aruco_localizer.py  aruco_pose_scale_factor.py  aruco_scale_factor.py  base.py  cli.py  colmap.py  download.py  opt.py  patch_colmap.py  registration.py  test.py  utils.py  visualization.py
aruco_estimator/colmap/: read_write_model.py  visualize_model.py
aruco_estimator/helper/: aruco.py  download.py  opt.py  utils.py  visualization.py
aruco_estimator/localizers/: __init__.py  aruco_localizer.py  base.py
aruco_estimator/scale_factor/: __init__.py  aruco_scale_factor.py
aruco_estimator/sfm/: __init__.py  colmap.py  common.py
aruco_estimator/tools/: align.py  colmap_recon.py  downloader.py  merge.py  merge_by_tag.py  reassign_origin copy.py  reassign_origin.py  register.py  registration.py  reverse_project.py
aruco_estimator/visualization/: __init__.py  visualization.py  visualization_scale_factor_estimator.py
demos/: test.py
normalized/sparse/: cameras.txt
src/aruco_estimator/: __init__.py  aruco.py  aruco_scale_factor.py  base.py  gui.py
src/aruco_estimator/helper/: __init__.py  download.py
tests/: test_estimation.py  test_intersect.py  test_kabsch_umeyama.py
