[project]
name = "aruco-estimator"
version = "1.1.12"
description = ""
authors = [
  { name = "Lukas Meyer", email = "lukas.meyer@fau.de" },
  { name = "Nile Walker", email = "nilezwalker@gmail.com" },
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
dependencies = [
  "numpy>=1.22.4",
  "tqdm>=4.64.0",
  "pyquaternion==0.9.9",
  "pyransac3d==0.6.0",
  "open3d>=0.19.0,<0.20",
  "scikit-learn>=1.3.2",
  "addict>=2.4.0,<3",
  "opencv-python>=4.10.0.84",
  "opencv-contrib-python>=4.10.0.84",
  "click>=8.1.8,<9",
]

[project.scripts]
aruco-estimator = "aruco_estimator.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8.4,<0.9",
    "ipykernel>=6.29.5,<7",
    "pytest>=8.4.0",
]
colmap = [
  "pycolmap>=3.11.1,<4",
  "colmap-wrapper",
  # "pyceres==2.4", # TODO: Add for colmap 
]

# [project.optional-dependencies]
# default = [
#   "pycolmap>=3.11.1,<4",
#   "colmap-wrapper",
#   # "pyceres==2.4", # TODO: Add for colmap 
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["F403"]
extend-select = ["I"]

[tool.uv.sources]
colmap-wrapper = { git = "https://github.com/meyerls/colmap-wrapper", rev = "f367bc2e9caf9f0f9ae2e7809834cb73849d5864" }

[tool.uv]
default-groups = ["colmap"]
