[project]
name = "aruco-estimator"
version = "1.2.0"
description = "Scene pose estimation using ArUco markers and 3D point clouds."
authors = [
  { name = "Lukas Meyer", email = "lukas.meyer@fau.de" },
  { name = "Nile Walker", email = "nilezwalker@gmail.com" },
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
dependencies = [
  "numpy>=1.22.4",
  "tqdm>=4.64.0",
  "pyquaternion>=0.9.9",
  "pyransac3d>=0.6.0",
  "open3d>=0.19.0,<0.20",
  "opencv-python>=4.10.0.84",
  "opencv-contrib-python>=4.10.0.84",
  "click>=8.1.8,<9",
]

[project.scripts]
aruco-estimator = "aruco_estimator.cli:main"

[dependency-groups]
dev = ["ruff>=0.8.4,<0.9", "ipykernel>=6.29.5,<7", "pytest>=8.4.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv]
native-tls = true
[tool.ruff]
# select = ["F403"]
# extend-select = ["I"]
